[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/melodizer_scene.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto_Condensed-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Themes/musicLab_theme.tres" type="Theme" id=3]
[ext_resource path="res://Themes/script_minimal.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=2]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0117647, 0.211765, 0.423529, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0862745, 0.419608, 0.239216, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fonts/ShadowsIntoLight-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = SubResource( 4 )

[node name="melodizer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="melodyze_btn" type="Button" parent="."]
margin_left = 984.0
margin_top = 72.0
margin_right = 1225.0
margin_bottom = 136.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "Melodyse"

[node name="edit_progression_btn" type="Button" parent="."]
margin_left = 984.0
margin_top = 152.0
margin_right = 1225.0
margin_bottom = 216.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Edit SATB"

[node name="console_rtl" type="RichTextLabel" parent="."]
margin_left = 240.0
margin_top = 32.0
margin_right = 936.0
margin_bottom = 280.0
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "text"

[node name="export_console_text_btn" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Export console"

[connection signal="pressed" from="melodyze_btn" to="." method="_on_melodyze_btn_pressed"]
[connection signal="pressed" from="edit_progression_btn" to="." method="_on_edit_progression_btn_pressed"]
[connection signal="pressed" from="export_console_text_btn" to="." method="_on_export_console_text_btn_pressed"]
